--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@expo-google-fonts/source-serif-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-firebase/firestore": "^21.14.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.46",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -31,12 +35,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.1.0",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.6",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.3.2",
     "typescript": "^5.3.3"
