--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "4.8.1",
     "react-native-screens": "~3.30.0",
     "react-native-svg": "13.4.0",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -45,7 +46,7 @@
     "jest": "^29.7.0",
     "jest-expo": "^53.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "react-native-dotenv": "^3.4.11",
+
     "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.3.2",
     "typescript": "^5.3.3"
