--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -15,14 +15,17 @@
     "@expo-google-fonts/source-serif-pro": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-firebase/app": "^19.3.0",
+    "@react-native-firebase/firestore": "^19.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "dayjs": "^1.11.13",
     "expo": "~52.0.46",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.0.3",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.1",
     "react": "18.3.1",
