--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,13 @@ target 'hatchling' do
     :app_path => "#{Pod::Config.instance.installation_root}/..",
     :privacy_file_aggregation_enabled => podfile_properties['apple.privacyManifestAggregationEnabled'] != 'false',
   )
+
+  # Add modular headers for specific pods causing issues with static frameworks
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseCoreExtension', :modular_headers => true
+  pod 'FirebaseFirestoreInternal', :modular_headers => true
+
   post_install do |installer|
     react_native_post_install(
       installer,
