--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "node patch-gesture-handler.js"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-optional-chaining": "^7.27.1",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/poppins": "^0.3.0",
     "@expo-google-fonts/source-serif-pro": "^0.2.3",
@@ -28,6 +31,7 @@
     "firebase": "11.6.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.8.1",
     "react-native-screens": "~3.30.0",
