--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@expo-google-fonts/source-serif-pro": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-navigation/bottom-tabs": "^6.5.17",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.6.8",
     "date-fns": "^4.1.0",
@@ -30,9 +30,9 @@
     "firebase": "11.6.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "~4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.4.0",
     "zod": "^3.24.3",
